Fixed the admin commands and changed data in dupe.